src/test/deca/syntax/invalid/commentaire_non_ouvert.deca
/* Ceci est un test où les commentaires sont mal faits */ En effet j'ai fermé le commentaire
mais pas rouvert celui-ci */
// Résultat attendu : Echec en ligne 1

{
    print("Test du commentaire pas ouvert");
}